tests/types/t6969.nim
discard """
targets: native
errormsg: "invalid type: 'object' for var"
line: 7
"""

var a: object
